# drone-defense-ml

./: .gitignore  .gitmodules  README.md  pyproject.toml
scripts/: run_tracker.py
src/dronedefense/: models.py  tracker.py  tracker_gui.py
