[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dronedefense"
version = "0.0.1"
description = "Drone Defense"
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    "opencv-python",
    "torch==2.4",
    "torchvision==0.19.0",
    "transformers",
]

[project.optional-dependencies]

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]
include = ["dronedefense"]